html structure done

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="head">
       TO DO LIST
     </div>
-  <form action="">
+  <form action="" class="todo-form">
     <input class="todo-name" type="text" placeholder=" Wpisz co masz zrobić...">
     <input class="submit" type="submit" value="Dodaj">
   </form>
@@ -25,6 +25,7 @@
         <input type="checkbox">
         <span><i class="fa fa-check"></i></span>
         Kup budyń
+        <span class="remove"><i class="fa fa-close"></i> </span>
       </label>
     </li>
     <li>
@@ -32,6 +33,7 @@
           <input type="checkbox">
           <span><i class="fa fa-check"></i></span>
           Pizza
+          <span class="remove"><i class="fa fa-close"></i> </span>
         </label>
       </li>
   </ul>
